Add blob transfer trace logging
